--- a/asset/style.css
+++ b/asset/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+span, label, button, p {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .container-fluid{
     position: relative;
     width: 100%;
@@ -15,4 +21,11 @@
 
 .quiz-title{
     background-color: rgb(144, 143, 138);
+}
+
+.quiz-footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(130, 134, 129);
 }
