--- a/asset/style.css
+++ b/asset/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 span, label, button, p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif!important;
+    
 }
 
 .container-fluid{
@@ -19,6 +20,31 @@ span, label, button, p {
     background-color: rgb(223, 236, 240);
 }
 
+#result, #time-out, #user{
+    position: relative;
+    width: 100%;
+}
+
+
+.time-out-container-content, .container-content{
+    position: absolute;
+    margin-left: 25%;
+    margin-top: 10%;
+    width: 40%;
+    height: 170px;
+    background-color: rgb(223, 236, 240);
+}
+
+.user-content{
+    position: absolute;
+    margin-left: 25%;
+    margin-top: 10%;
+    width: 40%;
+    height: 220px;
+    background-color: rgb(223, 236, 240);
+}
+
+
 .quiz-title{
     background-color: rgb(144, 143, 138);
 }
@@ -35,31 +61,33 @@ span, label, button, p {
 } */
 
 @media (max-width: 1090px) {
-    #button{
-        padding:2px 4px;
-        font-size:90%;
-        margin-top: -20px;
-        /* position: static; */
+    
+
+    .container-card{
+        height: 690px;
     }
 
     #name{
         text-align: left!important;
     }
-
-    /* .container-card{
-        height: 800px;
-    } */
   }
 
   @media (max-width: 807px) {
         .container-card{
             height: 800px;
         }
+        #button{
+            padding:2px 4px;
+            font-size:90%;
+            margin-top: -20px;
+            /* position: static; */
+        }
   }
 
-  @media (max-width: 473px) {
+  @media (max-width: 550px) {
     .container-card{
-        height: 850px;
+        height: 800px;
+        font-size: small;
     }
 
     .end-time{
